Fix overflow

--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -5,14 +5,23 @@
 @import '~@fontsource/roboto-mono';
 
 body {
+  width: 100%;
+  height: 100%;
+  position: relative;
   overflow: hidden;
   margin: 0 auto;
   background-color: black;
-  overscroll-behavior-x: none;
 }
 
 .MuiBox-root,
 .MuiStack-root,
 .MuiDivider-root {
   font-family: 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
+}
+
+.rootClass {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
 }
